--- a/src/components/RoomHeader/RoomHeader.module.css
+++ b/src/components/RoomHeader/RoomHeader.module.css
@@ -11,14 +11,24 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 24px;
+    font-size: 7rem;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); /* Black with 30% opacity */
   }
   
   .bannerText {
-    background-color: rgba(0, 0, 0, 0.5);
+    
     padding: 10px 20px;
     border-radius: 8px;
+    z-index: 2;
   }
   
