--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -1,9 +1,15 @@
 .HeaderSec {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    /* background-color: #f0f0f0; Change this to your desired background color */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  /* padding: 20px; */
+  /* margin: 20px; */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: rgb(245, 240, 223);
+  height: 15rem;
+  width: 70rem;
+  margin: 1rem auto;
   }
   
   /* Styles for the dateTimeSec */
